# traceback

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
docs/: browser-activity-demo.md
scripts/: __init__.py  generate_diverse_synthetic_fixtures.py  generate_noisy_synthetic_data.py
src/traceback_app/: __init__.py  cli.py
src/traceback_app/claims/: __init__.py  schema.py
src/traceback_app/evidence/: __init__.py  browser_sqlite.py  loaders.py
src/traceback_app/gui/: __init__.py  adapters.py
src/traceback_app/report/: __init__.py  json_report.py  markdown.py
src/traceback_app/validators/: __init__.py  browser_activity.py  logon.py  prefetch_process.py
tests/: test_browser_activity_demo_cli.py  test_browser_activity_validation.py  test_browser_sqlite_extraction.py  test_diverse_synthetic_fixtures.py  test_gui_adapters.py  test_logon_validation.py  test_malformed_source_data.py  test_noisy_fixture_generation.py  test_prefetch_process_validation.py  test_provenance_report_display.py  test_readme_documentation.py  test_real_world_malformed_source_data.py  test_source_data_integrity.py
tests/fixtures/: README.md
tests/fixtures/diverse/: browser_activity_claims.large.zero-insufficient-40-16-24-0.json  browser_activity_claims.small.mixed-4-1-2-1.json  browser_activity_events.large.zero-insufficient-40-16-24-0.json  browser_activity_events.small.mixed-4-1-2-1.json  manifest.json  windows_logon_claims.large.zero-insufficient-24-9-15-0.json  windows_logon_claims.small.zero-supported-5-0-3-2.json  windows_logon_events.large.zero-insufficient-24-9-15-0.json  (+5 more)
(+38 files in other folders)
